<resources>
    <string name="app_name">Let\'s Go Geo Native</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_personal_info">Personal Info</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Home</string>
    <string name="menu_learning_material">Learning Material</string>
    <string name="menu_student_performance">Student Performance</string>
    <string name="menu_notification">Notification</string>
    <string name="menu_setting">Setting</string>
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="or">Or</string>
    <string name="sections">Sections</string>
    <string name="quiz">Quiz</string>
    <string name="next">Next</string>
    <string name="email">Email</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in">Sign in.</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="reset_password">Reset Password</string>
    <string name="topic_name">Topic Name</string>
    <string name="notes_url">Notes url</string>
</resources>