<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/rounded_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/rounded_book_2_24"
            android:title="@string/menu_learning_material" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/rounded_bar_chart_24"
            android:title="@string/menu_student_performance" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/rounded_settings_24"
            android:title="@string/menu_setting" />
    </group>
</menu>