<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.bmh.letsgogeonative.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.bmh.letsgogeonative.ui.learning_material.LearningMaterialFragment"
        android:label="@string/menu_learning_material"
        tools:layout="@layout/fragment_learning_material">
        <action
            android:id="@+id/action_nav_gallery_to_listTopicFragment"
            app:destination="@id/listTopicFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.bmh.letsgogeonative.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_student_performance"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/listTopicFragment"
        android:name="com.bmh.letsgogeonative.ui.list_topic.ListTopicFragment"
        android:label="ListTopicFragment"
        tools:layout="@layout/fragment_list_topic">
        <action
            android:id="@+id/action_listTopicFragment_to_topicContentFragment"
            app:destination="@id/topicContentFragment" />
    </fragment>
    <fragment
        android:id="@+id/topicContentFragment"
        android:name="com.bmh.letsgogeonative.ui.list_topic.topic_content.TopicContentFragment"
        android:label="TopicContentFragment"
        tools:layout="@layout/fragment_topic_content" />
    <fragment
        android:id="@+id/userProfile"
        android:name="com.bmh.letsgogeonative.ui.profile.UserProfile"
        android:label="UserProfile"
        tools:layout="@layout/fragment_user_profile" />
</navigation>